--- a/DC_Blog/index.html
+++ b/DC_Blog/index.html
@@ -24,20 +24,19 @@
         </nav>
         <main>
             <div class="title">
-                <h2>Fake it ;til you Make it:</h2>
-                <br/>
+                <h2>Fake it 'til you Make it:</h2>
                 <h2>A Developer's Story</h2>
             </div>
             <div class="social">
-                <p></p>
+                <p>October 6th 2018</p>
                 <button>Follow @DigitalCrafts</button>       
             </div>
             <div class="text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat eligendi praesentium nemo fugit, maiores impedit reiciendis blanditiis sit modi adipisci.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore maxime rem culpa est vero iusto officiis. Maxime saepe, nulla nam harum recusandae et enim, totam officia dolores aliquam optio dolorum esse consequuntur quibusdam odit iusto tempore ratione, nostrum culpa. Ipsam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sequi aliquid, vitae ab nemo recusandae aspernatur asperiores provident odio soluta incidunt explicabo consequatur quos ipsam eligendi, in veritatis consequuntur perspiciatis?</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, et?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus delectus, nemo minus vitae totam temporibus distinctio esse, dolor dolores accusamus velit? Aliquam iusto dolorem earum cupiditate, totam distinctio exercitationem cum, quod, animi ullam ex a excepturi explicabo soluta debitis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat eligendi praesentium nemo fugit, maiores impedit reiciendis blanditiis sit modi adipisci.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore maxime rem culpa est vero iusto officiis. Maxime saepe, nulla nam harum recusandae et enim, totam officia dolores aliquam optio dolorum esse consequuntur quibusdam odit iusto tempore ratione, nostrum culpa. Ipsam</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore maxime rem culpa est vero iusto officiis. Maxime saepe, nulla nam harum recusandae et enim, totam officia dolores aliquam optio dolorum esse consequuntur quibusdam odit iusto tempore ratione, nostrum culpa. Ipsam.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore maxime rem culpa est vero iusto officiis. Maxime saepe, nulla nam harum recusandae et enim, totam officia dolores aliquam optio dolorum esse consequuntur quibusdam odit iusto tempore ratione, nostrum culpa. Ipsam</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sequi aliquid, vitae ab nemo recusandae aspernatur asperiores provident odio soluta incidunt explicabo consequatur quos ipsam eligendi, in veritatis consequuntur perspiciatis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore maxime rem culpa est vero iusto officiis. Maxime saepe, nulla nam harum recusandae et enim, totam officia dolores aliquam optio dolorum esse consequuntur quibusdam odit iusto tempore ratione, nostrum culpa. Ipsam</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, et?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore maxime rem culpa est vero iusto officiis. Maxime saepe, nulla nam harum recusandae et enim, totam officia dolores aliquam optio dolorum esse consequuntur quibusdam odit iusto tempore ratione, nostrum culpa. Ipsam</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus delectus, nemo minus vitae totam temporibus distinctio esse, dolor dolores accusamus velit? Aliquam iusto dolorem earum cupiditate, totam distinctio exercitationem cum, quod, animi ullam ex a excepturi explicabo soluta debitis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore maxime rem culpa est vero iusto officiis. Maxime saepe, nulla nam harum recusandae et enim, totam officia dolores aliquam optio dolorum esse consequuntur quibusdam odit iusto tempore ratione, nostrum culpa. Ipsam</p>
             </div>
         </main>
         <hr/>
