completed DC_Blog

--- a/DC_Blog/index.html
+++ b/DC_Blog/index.html
@@ -28,7 +28,7 @@
                 <h2>A Developer's Story</h2>
             </div>
             <div class="social">
-                <p>October 6th 2018</p>
+                <p class="date">OCTOBER 6, 2018</p>
                 <button>Follow @DigitalCrafts</button>       
             </div>
             <div class="text">
