side bar and most of main content complete

--- a/DC_Docs/index.html
+++ b/DC_Docs/index.html
@@ -10,44 +10,47 @@
 <body>
     <div class="container">
         <nav>
-            <form action="search">
-                <label for="search">DigitalCrafts Docs</label>
-                <input type="text" id="search" value="search">
-            </form>
-            <ul>
-                <a href="/">
-                    <li>Introduction</li>
-                </a>
-                <a href="/">
-                    <li>Motivation</li>
-                </a>
-                <a href="/">
-                    <li>Campus Info</li>
-                </a>
-                <a href="/">
-                    <li>Job Searches</li>
-                </a>
-                <a href="/">
-                    <li>FAQ</li>
-                </a>
-            </ul>
-            <p class="copyright">©2018 DigitalCrafts Inc.</p>
+            <div class="sidebar">
+                <form action="search">
+                    <label for="search">DigitalCrafts Docs</label>
+                    <br/>
+                    <input type="text" id="search" value="search">
+                </form>
+                <ul>
+                    <a href="/">
+                        <li>Introduction</li>
+                    </a>
+                    <a href="/">
+                        <li>Motivation</li>
+                    </a>
+                    <a href="/">
+                        <li>Campus Info</li>
+                    </a>
+                    <a href="/">
+                        <li>Job Searches</li>
+                    </a>
+                    <a href="/">
+                        <li>FAQ</li>
+                    </a>
+                </ul>
+                <p class="copyright">©2018 DigitalCrafts Inc.</p>
+            </div>  
         </nav>
         <main>
             <div class="header">
-                <p></p>
-                <img src="" alt="">
-                <h1></h1>
+                <p class="welcome">Welcome to</p>
+                <img src="img/logo.png" alt="digitalcrafts logo">
+                <h1>DigitalCrafts Docs</h1>
             </div>
             <div class="content">
-                <h2></h2>
-                <p></p>
-                <blockquote></blockquote>
-                <h2></h2>
-                <p></p>
-                <p></p>
-                <h2></h2>
-                <p></p>
+                <h2>INTRODUCTION</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, ullam! Alias a soluta iste assumenda quasi. Quis, excepturi. Dolore, mollitia optio. Sit dolore velit quia odit voluptates fugiat hic eaque, esse est delectus, facilis ut nostrum earum ipsam sapiente reiciendis!</p>
+                <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio corrupti illum dolor modi rem vero sunt architecto. Provident, alias beatae.<br/>-Julius Caesar</blockquote>
+                <h2>MOTIVATION</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consectetur harum impedit quas totam aperiam repellat at! Accusantium officia eligendi labore harum ut rerum saepe ipsam nesciunt aspernatur voluptatem! Voluptatem vitae facere nulla atque. Tenetur accusantium numquam consectetur, nam similique non facilis laudantium tempora autem provident fugit deserunt ea aut?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis delectus harum, perspiciatis iure commodi facere consectetur voluptates hic vel molestiae?</p>
+                <h2>CAMPUS INFO</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste molestias sapiente dolorum tempore, maxime non repellat placeat necessitatibus inventore nostrum distinctio, porro, suscipit fuga nam recusandae. Hic, quas commodi. Maxime, quis a magni nemo consequatur, vitae temporibus facilis ratione beatae quas iste tempora illo. Nulla, dolore numquam? Similique, quia. Tenetur.</p>
             </div>
         </main>   
     </div>   
