completed DC_Docs the quote was most challenging

--- a/DC_Docs/index.html
+++ b/DC_Docs/index.html
@@ -45,7 +45,13 @@
             <div class="content">
                 <h2>INTRODUCTION</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, ullam! Alias a soluta iste assumenda quasi. Quis, excepturi. Dolore, mollitia optio. Sit dolore velit quia odit voluptates fugiat hic eaque, esse est delectus, facilis ut nostrum earum ipsam sapiente reiciendis!</p>
-                <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio corrupti illum dolor modi rem vero sunt architecto. Provident, alias beatae.<br/>-Julius Caesar</blockquote>
+                <div class="quoteblock">
+                    <blockquote class="quote">
+                        <span class="quotebefore">&ldquo;</span>
+                        <p class="quotetext">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio corrupti illum dolor modi rem vero sunt architecto. Provident, alias beatae.<span class="quoteafter">&ldquo;</span></p>
+                    </blockquote>
+                    <p id="attribution">-Julius Caesar</p>
+                </div>
                 <h2>MOTIVATION</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consectetur harum impedit quas totam aperiam repellat at! Accusantium officia eligendi labore harum ut rerum saepe ipsam nesciunt aspernatur voluptatem! Voluptatem vitae facere nulla atque. Tenetur accusantium numquam consectetur, nam similique non facilis laudantium tempora autem provident fugit deserunt ea aut?</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis delectus harum, perspiciatis iure commodi facere consectetur voluptates hic vel molestiae?</p>
