basic CSS designed. sections vertically stacked

--- a/DgtlCrfts/index.html
+++ b/DgtlCrfts/index.html
@@ -13,9 +13,9 @@
             <header>
                 <nav>
                     <ul>
-                        <li><a href="">HOME</a></li>
-                        <li><a href=""></a>FAQ</li>
-                        <li><a href=""></a>CONTACT</li>
+                        <li><a href="/">HOME</a></li>
+                        <li><a href="/">FAQ</a></li>
+                        <li><a href="/">CONTACT</a></li>
                     </ul>
                 </nav>
                 <div class="logo">
@@ -32,18 +32,18 @@
                     <p>The future of tomorow is today.</p>
                 </div>
                 <div class="icons">
-                    <div class="users">
-                        <div class="icon at">@</div>
+                    <div class="icon users">
+                        <div class="at"><span>@</span></div>
                         <h2>Users</h2>
                         <p>You want people who will buy your stuff? We have those people in pens out back.</p>
                     </div>
-                    <div class="hashtags">
-                        <div class="icon hash">#</div>
+                    <div class="icon hashtags">
+                        <div class="hash"><span>#</span></div>
                         <h2>Hashtags</h2>
                         <p>The debate is out on which is better: hashtags or hashbrowns. Answer: potatoes always win.</p>
                     </div>
-                    <div class="moolah">
-                        <div class="icon dollar">$</div>
+                    <div class="icon moolah">
+                        <div class="dollar"><span>$</span></div>
                         <h2>Moolah</h2>
                         <p>Money isn't real. Money is a construct. We pay you in bottled ghosts.</p>
                     </div>
@@ -54,9 +54,9 @@
             <footer>
                 <div class="footlinks">
                     <ul>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">FAQ</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="/">HOME</a></li>
+                        <li><a href="/">FAQ</a></li>
+                        <li><a href="/">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="copyright">
