header section completed

--- a/DgtlCrfts/index.html
+++ b/DgtlCrfts/index.html
@@ -19,11 +19,13 @@
                     </ul>
                 </nav>
                 <div class="logo">
-                    <img src="img/logo.png" alt="digitalcrafts logo">
-                    <h1>DgtlCrfts</h1>
-                    <h3>We do stuff for you, we are "nice".</h3>
-                    <div class="arrow"></div>
+                    <div class="insidelogo">
+                        <img src="img/logo.png" alt="digitalcrafts logo">
+                        <h1>DgtlCrfts</h1>
+                        <h3>We do Stuff for You, We are "Nice". That's What our Mom says.</h3>
+                    </div>
                 </div>
+                <div class="arrow"></div>
             </header>
         </div>
         <div class="main">
