working on main, footer is finished

--- a/DgtlCrfts/index.html
+++ b/DgtlCrfts/index.html
@@ -31,7 +31,7 @@
         <div class="main">
             <main>
                 <div class="tagline">
-                    <p>The future of tomorow is today.</p>
+                    <p>The future of tomorrow is today.</p>
                 </div>
                 <div class="icons">
                     <div class="icon users">
