--- a/DgtlCrfts/index.html
+++ b/DgtlCrfts/index.html
@@ -42,7 +42,7 @@
                     <div class="icon hashtags">
                         <div class="hash"><span>#</span></div>
                         <h2>Hashtags</h2>
-                        <p>The debate is out on which is better: hashtags or hashbrowns. Answer: potatoes always win.</p>
+                        <p>Which is better, hashtags or hashbrowns? Answer: potatoes always win.</p>
                     </div>
                     <div class="icon moolah">
                         <div class="dollar"><span>$</span></div>
